# not-chipotle

./: README.md
not-chipotle-service/: pyproject.toml
not-chipotle-service/config/: menu.json
not-chipotle-service/src/not_chipotle_service/: __main__.py  main.py
not-chipotle-service/src/not_chipotle_service/agents/: order_manager_agent.py
not-chipotle-service/src/not_chipotle_service/order/: cart_operations.py  models.py  utils.py
not-chipotle-ui/: package-lock.json  package.json
