[project]
name = "not-chipotle-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Leo",email = "leo.battalora@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "not_chipotle_service", from = "src"}]

[tool.poetry.scripts]
not-chipotle-service = "not_chipotle_service.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
